--- a/fronted/public/views/ciclo_cultivo/ciclo_cultivo_actualizado.html
+++ b/fronted/public/views/ciclo_cultivo/ciclo_cultivo_actualizado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/style_confirmacion.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/ciclo_cultivo/style_actualizar_ciclo_cultivo.css">
 </head>
 <body>
     <header class="header">
