--- a/fronted/public/views/cultivo/datos_cultivo.html
+++ b/fronted/public/views/cultivo/datos_cultivo.html
@@ -4,80 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos Cultivo</title>
-    <link rel="stylesheet" href="../CSS/style_datos_cultivo.css">
+    <link rel="stylesheet" href="/fronted/public/css/main.css">
+    <script src="/fronted/public/views/components/header.js"></script>
+    <script src="/fronted/public/js/cultivos/enviar.js"></script>
 </head>
 <body>
-    <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
-        <a class="header__link" href="#">Volver</a>
-    </header>
-
-    <main class="main">
-        <div class="cultivo">
-            <div class="cultivo__container">
-                <div class="cultivo__imagen">
-                    <svg class="cultivo__icono" xmlns="http://www.w3.org/2000/svg" width="400" height="300" viewBox="0 0 24 24" fill="none" stroke="#dcdcdc" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M15 8h.01" />
-                        <path d="M12.5 21h-6.5a3 3 0 0 1 -3 -3v-12a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v6.5" />
-                        <path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l4 4" />
-                        <path d="M14 14l1 -1c.67 -.644 1.45 -.824 2.182 -.54" />
-                        <path d="M16 19h6" />
-                        <path d="M19 16v6" />
-                    </svg>
+    <header class="header"></header>
+    <main class="form-container">
+        <form class="form" action="http://localhost:3000/cultivo" method="POST" enctype="multipart/form-data">
+            <h2 class="form__title">Datos Cultivo</h2>
+    
+            <div class="form__row">
+                <div class="form__column">
+                    <label class="form__label">Cargar imagen</label>
+                    <input class="form__input form__input--imagen" type="file" name="image" id="image">
+    
+                    <label class="form__label">Tipo cultivo</label>
+                    <input class="form__input cultivo__input--type" type="text" name="cultivoType">
+    
+                    <label class="form__label">Nombre Cultivo</label>
+                    <input class="form__input cultivo__input--name" type="text" name="cultivoName">
+    
+                    <label class="form__label">Identificador cultivo</label>
+                    <input class="form__input cultivo__input--ID" type="date" name="cultivoID">
                 </div>
-
-                <form class="cultivo__form" id="cultivoForm">
-                    <legend><h2 class="cultivo__titulo">Datos Cultivo</h2></legend>
-                    
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Tipo Cultivo</label>
-                        <input class="cultivo__input" type="text" id="tipoCultivo">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Nombre Cultivo</label>
-                        <input class="cultivo__input" type="text" id="nombreCultivo">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Identificador Cultivo</label>
-                        <input class="cultivo__input" type="text" id="idCultivo">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Tamaño</label>
-                        <input class="cultivo__input" type="text" id="tamano">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Ubicación</label>
-                        <input class="cultivo__input" type="text" id="ubicacion">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Descripción</label>
-                        <input class="cultivo__input" type="text" id="descripcion">
-                    </div>
-
-                    <div class="cultivo__campo">
-                        <label class="cultivo__label">Estado (activo / inactivo)</label>
-                        <input class="cultivo__input" type="text" id="estado">
-                    </div>
-
-                    <div id="mensaje" class="mensaje"></div>
-
-                    <button type="submit" class="cultivo__boton">Enviar</button>
-                </form>
-
-                <div class="cultivo__botones">
-                    <button class="cultivo__boton"><a class="cultivo__enlace" href="ID_cultivo_deshabilitar.html">Deshabilitar</a></button>
-                    <button class="cultivo__boton"><a class="cultivo__enlace" href="ID_cultivo_actualizar.html">Actualizar</a></button>
+    
+                <div class="form__column">
+                    <label class="form__label">Tamaño</label>
+                    <input class="form__input cultivo__input--size" type="date" name="size">
+    
+                    <label class="form__label">Ubicacion</label>
+                    <input class="form__input cultivo__input--location" type="text" name="location">
+    
+                    <label class="form__label">Descripción</label>
+                    <input class="form__input cultivo__input--description" type="text" name="description">
+    
+                    <label class="form__label">Estado (activo / inactivo)</label>
+                    <select name="state" class="form__input cultivo__input--state">
+                        <option value="">Seleccione una opción</option>
+                        <option value="Activo">Activo</option>
+                        <option value="Inactivo">Inactivo</option>
+                    </select>
                 </div>
             </div>
-        </div>
+    
+            <div class="form__btn-group">
+                <button type="submit" class="form__btn form__btn--registrar">Actualizar</button>
+                <a href="#" class="btn__secundary">Deshabilitar</a>
+            </div>
+        </form>
     </main>
-
-    <script src="../JS/validacion_datos.js"></script>
+    <script src="/fronted/public/js/cultivos/validacion_datos.js"></script>
 </body>
 </html>
